6.0
	+ Syntax changes to be compliant with Perl 5.26
	+ Use 5.1-nss repo for NS license keys
	+ Allow offline license key validation
	+ Automatic save changes in license activation after first login
	+ Avoid errors when parsing JSON for dashboard widgets
	+ Force restore of configuration backup from 3.X by using custom script
	+ Adapt nginx conf to allow vncviewer for zentyal-virt
	+ Add zentyal-virt icon
	+ Add support for licenses with unlimited users
5.1.1
	+ Change trial messages to adapt to new 45-day period
	+ Add support for pepertual licenses
5.1
	+ NetWrappers::list_ifaces() now ignores invalid ones like bonding_masters
	+ Reimplement EBox::Validate::isIPInNetwork using NetAddr::IP
	+ Safer management of systemd daemons enabled/disabled status
	+ Add libpam-cap dependency to avoid warnings in auth.log
	+ Avoid uninitialized comparison warnings in zentyal.log regarding
	  EBox::Types::Service and EBox::Types::IPAddr
	+ Use POST method when submitting forms in AJAX requests from dialogs
	+ Pass action to HTMLSetter templates so they can have a different
	  behavior for add and edit
	+ Avoid errors when license file not exist in webadmin restart
	+ Services stop working and activation is required after trial expired
	+ Allow up to 12 dashboard widgets per section instead of 4
	+ Add ftp icon
	+ Rename l2tp package icon to ipsec
	+ Forbid creation of local administrator user if exists in samba
	+ Use EBox::Config::version for commercial repo URL
	+ Simplify _readTheme code and remove unnecessary zentyal.log noise
5.0.10
	+ Fix regression in EBox::Util::Version
5.0.9
	+ Wait for redis-server ready in systemd service
	+ Remove warning in EBox::Util::Version
	+ Add activate-license script to enter license key via CLI
5.0.8
	+ Avoid '/etc/localtime are the same file' errors using symlink
	+ New activation-pending mode prompting for valid trial code before login
5.0.7
	+ Update external links in dashboard
	+ Mask plaintext passwords in bug reports
5.0.6