@@ -1,5 +1,5 @@
 6.0
-	+ Set version to 6.0
+	+ Adapt cert paths and daemon management to Ubuntu 18.04
 5.1
 	+ Avoid Dashboard::Value errors in zentyal.log by adding missing use
 5.0.7
